--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "babel-node src/server.js"
   },
   "repository": {
     "type": "git",
@@ -17,6 +18,56 @@
     "url": "https://github.com/mattfro333/apple-react/issues"
   },
   "homepage": "https://github.com/mattfro333/apple-react#readme",
+  "babel": {
+    "presets": [
+      "react",
+      "env",
+      "stage-2"
+    ]
+  },
+  "plugins": [
+    "transform-export-extensions"
+  ],
+  "only": [
+    "./**/*.js",
+    "node_modules/jest-runtime"
+  ],
+  "devDependencies": {
+    "babel-eslint": "^10.0.1",
+    "enzyme": "^3.7.0",
+    "eslint": "^5.7.0",
+    "eslint-plugin-react": "^7.11.1",
+    "jest": "^23.6.0",
+    "object-assign": "^4.1.1",
+    "react-addons-perf": "^15.4.2",
+    "react-test-renderer": "^16.5.2",
+    "webpack-cli": "^3.1.2"
+  },
   "dependencies": {
+    "axios": "^0.18.0",
+    "babel-cli": "^6.26.0",
+    "babel-core": "^6.26.3",
+    "babel-loader": "^7.0.0",
+    "babel-plugin-transform-export-extensions": "^6.22.0",
+    "babel-polyfill": "^6.26.0",
+    "babel-preset-env": "^1.7.0",
+    "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-2": "^6.24.1",
+    "context": "^0.0.1",
+    "ejs": "^2.6.1",
+    "enzyme-adapter-react-16": "^1.6.0",
+    "enzyme-to-json": "^3.3.4",
+    "express": "^4.16.3",
+    "jest-cli": "^23.6.0",
+    "lodash.debounce": "^4.0.8",
+    "lodash.pickby": "^4.6.0",
+    "merge": "^1.2.1",
+    "pm2": "^3.2.2",
+    "react": "^16.5.2",
+    "react-dom": "^16.5.2",
+    "react-redux": "^5.0.3",
+    "redux": "^3.6.0",
+    "webpack": "^4.20.2",
+    "wget": "^0.0.1"
   }
 }
