--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "enzyme-to-json": "^3.3.4",
     "express": "^4.16.3",
     "jest-cli": "^23.6.0",
+    "js-yaml": "^3.13.1",
     "lodash.debounce": "^4.0.8",
     "lodash.pickby": "^4.6.0",
     "merge": "^1.2.1",
