--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "enzyme-adapter-react-16": "^1.6.0",
     "enzyme-to-json": "^3.3.4",
     "express": "^4.16.3",
+    "handlebars": "^4.0.14",
     "jest-cli": "^23.6.0",
     "js-yaml": "^3.13.1",
     "lodash.debounce": "^4.0.8",
