--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "react-dom": "^16.5.2",
     "react-redux": "^5.0.3",
     "redux": "^3.6.0",
+    "serialize-javascript": "^2.1.1",
     "webpack": "^4.20.2",
     "wget": "^0.0.1"
   }
