--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "lodash.debounce": "^4.0.8",
     "lodash.pickby": "^4.6.0",
     "merge": "^1.2.1",
+    "mixin-deep": "^1.3.2",
     "pm2": "^3.2.2",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
