--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "react-redux": "^5.0.3",
     "redux": "^3.6.0",
     "serialize-javascript": "^2.1.1",
+    "set-value": "^2.0.1",
     "webpack": "^4.20.2",
     "wget": "^0.0.1"
   }
