--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "js-yaml": "^3.13.1",
     "lodash.debounce": "^4.0.8",
     "lodash.pickby": "^4.6.0",
+    "mem": "^4.0.0",
     "merge": "^1.2.1",
     "mixin-deep": "^1.3.2",
     "pm2": "^3.2.2",
