--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "lodash.pickby": "^4.6.0",
     "mem": "^4.0.0",
     "merge": "^1.2.1",
+    "minimist": "^1.2.5",
     "mixin-deep": "^1.3.2",
     "pm2": "^3.2.2",
     "react": "^16.5.2",
